--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ transform: scale(1, 1)">
 transform: scale(1, 1)">
 <div style="font-size: 27px;" class="antialias">
 beitta<br>
+<font size="3" color="grey"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+powered by © <a href="http://www.strut.io/"> strut.io  </a> </font>
 </div>
 </div>
 </div>
