--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ transform: scale(, )">
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 36px;" class="antialias">
-<font face="'Ubuntu', sans-serif"><font color="#989595">&#25968;&#25454;</font>&nbsp;&nbsp;&nbsp; <font face="'Ubuntu', sans-serif">&nbsp;</font> &nbsp;&nbsp; &nbsp;&nbsp; &#30475;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font color="#f8ed00">&#20135;&#21697;</font><br></font>
+<font face="'Ubuntu', sans-serif"><font color="#989595">&#25968;&#25454;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#30475;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font color="#f8ed00">&#20135;&#21697;</font><br></font>
 </div>
 </div>
 </div>
@@ -271,7 +271,7 @@ transform: scale(1, 1)">
 <div class="transformContainer" style="-webkit-transform: scale(0.69, 0.69);
 -moz-transform: scale(0.69, 0.69);
 transform: scale(1.25, 1.25)">
-<iframe src="js3dword.htm" style="”overflow:" margin-top:="" height="800px" width="800px"></iframe>
+<iframe src="js3dword.htm" style="Â”overflow:" margin-top:="" height="800px" width="800px"></iframe>
 </div>
 </div>
 						
