--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 19px;" class="antialias">
-<div align="center">&#26460;&#24378;<br></div><div align="center">&#20140;&#19996;&#37329;&#34701;</div>
+<div align="center">&#23567;&#24378;<br></div><div align="center"> Smart City Tank Ltd </div>
 </div>
 </div>
 </div>
@@ -197,7 +197,7 @@ transform: scale(1, 1)">
 <div style="font-size: 27px;" class="antialias">
 beitta<br>
 <font size="3" color="grey"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-powered by © <a href="http://www.strut.io/"> strut.io  </a> </font>
+powered by Â© <a href="http://www.strut.io/"> strut.io  </a> </font>
 </div>
 </div>
 </div>
@@ -273,7 +273,7 @@ transform: scale(1, 1)">
 <div class="transformContainer" style="-webkit-transform: scale(0.69, 0.69);
 -moz-transform: scale(0.69, 0.69);
 transform: scale(1.25, 1.25)">
-<iframe src="js3dword.htm" style="”overflow:" margin-top:="" height="800px" width="800px"></iframe>
+<iframe src="js3dword.htm" style="Â”overflow:" margin-top:="" height="800px" width="800px"></iframe>
 </div>
 </div>
 						
